--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psutil = "^7.0.0"
 numba = "^0.61.2"
 matplotlib = "^3.10.3"
 tqdm = "^4.67.1"
+jupyter = "^1.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
