--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numba = "^0.61.2"
 matplotlib = "^3.10.3"
 tqdm = "^4.67.1"
 jupyter = "^1.1.1"
+torch = "^2.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
